# Copperlace

./: .gitignore  AGENTS.md  Makefile  README.adoc
.github/: ISSUE_TEMPLATE.md  pull_request_template.md
.github/workflows/: package-check.yml  pages.yml  release.yml
docs/: capabilities.adoc  configuration.adoc  errors.adoc  index.adoc  packaging.adoc  releasing.adoc  structured-output.adoc
examples/: README.adoc  character_scene.conf  culture_names.conf  fish_report.conf  gendered_pronouns.conf  item_card.conf  item_json.conf  product_blurb.conf  proverbs.conf  quest_log.conf  recursive_path.conf  release_note.conf  rival_duel.conf  structured_item.conf
examples/fragments/: fish_facts.conf
java/: pom.xml
java/all-platform/: pom.xml
java/api/: pom.xml
java/api/src/main/java/dev/mahe/copperlace/: Copperlace.java  CopperlaceException.java  CopperlaceProcessor.java  NativeLibrary.java  RuleSet.java
java/api/src/test/java/dev/mahe/copperlace/: CopperlaceTest.java
java/native/linux-aarch64/: pom.xml
java/native/linux-x86_64/: pom.xml
java/native/macos-aarch64/: pom.xml
java/native/macos-x86_64/: pom.xml
java/native/windows-x86_64/: pom.xml
java/src/main/java/dev/mahe/copperlace/: Copperlace.java  CopperlaceException.java  NativeLibrary.java  RuleSet.java
java/src/main/java/net/copperlace/: Copperlace.java  CopperlaceException.java  NativeLibrary.java  RuleSet.java
java/src/test/java/dev/mahe/copperlace/: CopperlaceTest.java
java/src/test/java/net/copperlace/: CopperlaceTest.java
js/: README.adoc
python/: MANIFEST.in  README.md  pyproject.toml  rust-core  setup.py
python/copperlace/: __init__.py  _native.py  core.py
python/tests/: test_core.py
rust-core/: Cargo.toml  example.conf
rust-core/src/: config.rs  ffi.rs  lib.rs  main.rs  processors.rs  render.rs  wasm.rs
rust-core/src/render/: compile.rs  error.rs  nodes.rs  processor.rs  ruleset.rs  state.rs  template.rs  value.rs
rust-core/tests/: cli.rs  ffi.rs  integration_tests.rs  nodes.rs  render.rs  structured_model.rs  structured_render.rs
scripts/: check_test_locations.py  check_versions.py  checksums.py  collect_java_native_artifacts.py  package_cli.py  smoke_cli_archive.py  smoke_java_artifacts.py  smoke_js_package.py  smoke_python_artifact.py  smoke_python_wheel.py  stage_java_native.py
website/: build_site.py  index.adoc  site.css  wrappers.adoc
