[build-system]
requires = ["setuptools>=70.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "copperlace"
version = "0.1.0"
description = "Python wrapper for the Copperlace text renderer"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "Copperlace contributors" }
]
keywords = ["text-generation", "templates", "procedural-generation", "grammar"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Rust",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing",
]

[project.urls]
Homepage = "https://github.com/bmahe/Copperlace"
Repository = "https://github.com/bmahe/Copperlace"
Documentation = "https://bmahe.github.io/Copperlace/"
Issues = "https://github.com/bmahe/Copperlace/issues"

[tool.setuptools]
packages = ["copperlace"]
include-package-data = true

[tool.setuptools.package-data]
copperlace = ["native/*"]
