[package]
name = "copperlace"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[lib]
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "copperlace"
path = "src/bin/copperlace.rs"

[dependencies]
hocon-rs = "0.1.3"
rand = "0.10.1"
serde_json = "1.0.150"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4.3", features = ["wasm_js"] }
js-sys = "0.3.82"
wasm-bindgen = "0.2.105"

[lints.rust]
unused_variables = "allow"
